# PermutationGenerator

./: .gitignore  CMakeLists.txt  README.md  main.R
include/: Main.h  sys_Utils.h
python/: main.py
src/: Main.cpp  sys_Utils.cpp
